--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -1,6 +1,6 @@
 .header h1{
     margin-top: 0;
     font-size: 3rem;
-    color: goldenrod;
+    color: rgb(255, 206, 83);
     text-align: center;
 }
