--- a/src/Components/Body/Body.css
+++ b/src/Components/Body/Body.css
@@ -1,8 +1,11 @@
 section{
+    margin-left: 5%;
+    margin-right: 5%;
     display: grid;
     grid-template-columns: 2fr 1fr;
 }
 .products{
     display: grid;
     grid-template-columns: repeat(3,1fr);
+    gap: 3rem;
 }
