--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -1,6 +1,7 @@
 .header h1{
     margin-top: 0;
     font-size: 3rem;
-    color: rgb(255, 206, 83);
+    color: rgb(254, 255, 191);
     text-align: center;
+    text-shadow: 2px 2px 5px #FF0000;
 }
