--- a/src/Components/Body/Body.css
+++ b/src/Components/Body/Body.css
@@ -9,3 +9,13 @@ section{
     grid-template-columns: repeat(3,1fr);
     gap: 3rem;
 }
+@media only screen and (max-width:426px) {
+    section{
+        /* display: block; */
+        grid-template-columns: 1fr;
+    }
+    .products{
+        grid-template-columns: 1fr;
+        gap: 3rem;
+    }
+}
