--- a/src/Components/Cart/Cart.css
+++ b/src/Components/Cart/Cart.css
@@ -14,3 +14,10 @@ color: rgb(51, 51, 51);
     width: 50%;
     margin-top: 1rem;
 }
+@media only screen and (max-width:426px) {
+    .cart{
+        margin-left: 0;
+        margin-top: 3rem;
+    }
+    
+}
