--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -1,7 +1,8 @@
 .header h1{
-    margin-top: 0;
     font-size: 3rem;
-    color: rgb(254, 255, 191);
+    /* padding-top: 1rem; */
+    /* padding-bottom: 1rem; */
+    color: rgb(255, 255, 255);
     text-align: center;
     text-shadow: 2px 2px 5px #FF0000;
 }
